compiler/tests/fail/x86-64/bug_1366.jazz
export fn test(reg u32 x) {
  ?{}, x += 0 + true;
}
